{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 12,
  "lineage": "10477186-eb45-0229-052e-d9eaeef8cae4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022374769739:internet-gateway/igw-0846254251611b5b5",
            "id": "igw-0846254251611b5b5",
            "owner_id": "022374769739",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-igw"
            },
            "tags_all": {
              "Name": "terraform-igw"
            },
            "vpc_id": "vpc-01ad8f6ce997d22f1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "022374769739",
            "id": "igw-0846254251611b5b5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022374769739:route-table/rtb-0f008daa265c81cf7",
            "id": "rtb-0f008daa265c81cf7",
            "owner_id": "022374769739",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0846254251611b5b5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-public-route-table"
            },
            "tags_all": {
              "Name": "terraform-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ad8f6ce997d22f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "022374769739",
            "id": "rtb-0f008daa265c81cf7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ea8dff18377913a",
            "region": "us-east-1",
            "route_table_id": "rtb-0f008daa265c81cf7",
            "subnet_id": "subnet-040b642f86cda4a44"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "022374769739",
            "id": "rtbassoc-00ea8dff18377913a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022374769739:security-group/sg-022a03e741605d1d7",
            "description": "Allow SSH from the Internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022a03e741605d1d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-bastion-sg",
            "name_prefix": "",
            "owner_id": "022374769739",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-bastion-sg"
            },
            "tags_all": {
              "Name": "terraform-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ad8f6ce997d22f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "022374769739",
            "id": "sg-022a03e741605d1d7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022374769739:security-group/sg-0282618491d0747f7",
            "description": "Allow SSH from Bastion Host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0282618491d0747f7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-022a03e741605d1d7"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-private-sg",
            "name_prefix": "",
            "owner_id": "022374769739",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-private-sg"
            },
            "tags_all": {
              "Name": "terraform-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ad8f6ce997d22f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "022374769739",
            "id": "sg-0282618491d0747f7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022374769739:subnet/subnet-04bd29497591f0ced",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bd29497591f0ced",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "022374769739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-private-subnet"
            },
            "tags_all": {
              "Name": "terraform-private-subnet"
            },
            "vpc_id": "vpc-01ad8f6ce997d22f1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "022374769739",
            "id": "subnet-04bd29497591f0ced",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022374769739:subnet/subnet-040b642f86cda4a44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040b642f86cda4a44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "022374769739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-public-subnet"
            },
            "tags_all": {
              "Name": "terraform-public-subnet"
            },
            "vpc_id": "vpc-01ad8f6ce997d22f1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "022374769739",
            "id": "subnet-040b642f86cda4a44",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:022374769739:vpc/vpc-01ad8f6ce997d22f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ed8b9bcb1d176b04",
            "default_route_table_id": "rtb-082f7849dddf9b2f6",
            "default_security_group_id": "sg-0550393b666cd2304",
            "dhcp_options_id": "dopt-0b4fefc86f7d412b4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01ad8f6ce997d22f1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-082f7849dddf9b2f6",
            "owner_id": "022374769739",
            "region": "us-east-1",
            "tags": {
              "Name": "terraform-custom-vpc"
            },
            "tags_all": {
              "Name": "terraform-custom-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "022374769739",
            "id": "vpc-01ad8f6ce997d22f1",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}